--- a/my-app/public/peliculas.html
+++ b/my-app/public/peliculas.html
@@ -2,14 +2,12 @@
 <html lang="es en" class="degradado">
 <head>
   <meta charset="UTF-8">
-  <title>Detalles de la serie</title>
+  <title>Serie details</title>
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="detalles.css">
   <link rel="stylesheet" href="style.css">
-
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
   
@@ -24,6 +22,7 @@
     
   </div>
 
-  <script src="detalles.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </body>
 </html>
